Cockatrice Change Log

==================== Cockatrice 0.6.2 ====================

December 25, 2018

* Upgrade Janome Tokenizer to 0.3.7
* Support JSON and YAML
* Add --log-file-max-bytes, --log-file-backup-count, --http-log-file-max-bytes, --http-log-file-backup-count flags


==================== Cockatrice 0.6.1 ====================

December 25, 2018

* Fix document build error


==================== Cockatrice 0.6.0 ====================

December 25, 2018

* Synchronize the latest index from the leader node
* Print default values in CLI usage
* Force log compaction
* Expose snapshot
* Add serializer and deserializer
* Disable ram storage
* Add Cluster API