@@ -2,8 +2,9 @@ Cockatrice Change Log
 
 ==================== Cockatrice 0.6.2 ====================
 
-December 25, 2018
+December 27, 2018
 
+* Fix a bug in index recovery process at server startup
 * Upgrade Janome Tokenizer to 0.3.7
 * Support JSON and YAML
 * Add --log-file-max-bytes, --log-file-backup-count, --http-log-file-max-bytes, --http-log-file-backup-count flags
